--- a/my-nodejs-app/.github/workflows/upload-to-s3.yml
+++ b/my-nodejs-app/.github/workflows/upload-to-s3.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 sync ./dist s3://your-bucket-name
+          aws s3 sync ./dist s3://githubactions7----s3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: your-region
+          AWS_DEFAULT_REGION: us-east-1
